<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voronoi Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_puzzle_editor">PuzzleEditor</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="PickImageSource">Select image source</string>
    <string-array name="ImageSourcesArray">
        <item >Camera</item>
        <item >Application Gallery</item>
        <item >Device Gallery</item><item >File System</item>
        
    </string-array>
    <string name="eraserON">Erase ON</string>
    <string name="eraserOFF">Erase OFF</string>
    <string name="dragON">Drag ON</string>
    <string name="dragOFF">Drag OFF</string>
    <string name="createPuzzle">Create</string>
    <string name="resetEditor">Reset</string>
    <string name="randomize">Random</string>
    <string name="imageON">Image ON</string>
    <string name="imageOFF">Image OFF</string>
    <string name="imageColor">Colored</string>
    <string name="imageMono">Monochromatic</string>
    <string name="gridON">Grid ON</string>
    <string name="gridOFF">Grid OFF</string>
    <string name="indexON">Index ON</string>
    <string name="indexOFF">Index OFF</string>

</resources>
