<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    tools:context=".PuzzleEditor" >

    <LinearLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:orientation="horizontal"
        android:gravity="left" >

        <ImageButton
            android:id="@+id/loadImgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_marginLeft="10dp"
             android:onClick="loadImage"
	        />

        <Button
            android:id="@+id/generateDiaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:text="@string/randomize"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
	        />
        
        <Button
            android:id="@+id/resetDiaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:text="@string/resetEditor"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
	        />
        
        <Button
            android:id="@+id/createPuzzleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:text="@string/createPuzzle"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:onClick="startGamePlay"
	        />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/auxOptionslayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@id/toolbarLayout"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/enableDragBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:width="60dp"
            android:textOff="@string/dragOFF"
            android:textOn="@string/dragON"
            android:onClick="SetCellsDragable" />
        
        <ToggleButton
            android:id="@+id/enableEraserBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:width="60dp"
            android:textOff="@string/eraserOFF"
            android:textOn="@string/eraserON"
            android:onClick="SetCellsEraseable" />
        
    </LinearLayout>
    
    <com.voronoi.puzzle.EditorView
        android:id="@+id/editorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLayout"
        android:layout_toLeftOf="@+id/auxOptionslayout"
        android:layout_margin="10dp"
        android:background="@color/translucent_black" />

</RelativeLayout>